// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`TSC: enums enumBasics 1`] = `
"// Enum without initializers have first member = 0 and successive members = N + 1
var E1 = /* @__PURE__ */ ((E1) => {E1[E1["A"]=0]="A";E1[E1["B"]=1]="B";E1[E1["C"]=2]="C";return E1;})(E1 || {});
// Enum type is a subtype of Number
var x = E1.A;
// Enum object type is anonymous with properties of the enum type and numeric indexer
var e = E1;
var e;
var e;
// Reverse mapping of enum returns string name of property 
var s = E1[e.A];
var s;
// Enum with only constant members
var E2 = /* @__PURE__ */ ((E2) => {E2[E2["A"]=1]="A";E2[E2["B"]=2]="B";E2[E2["C"]=3]="C";return E2;})(E2 || {});
// Enum with only computed members
var E3 = /* @__PURE__ */ ((E3) => {E3[E3["X"]="foo".length]="X";E3[E3["Y"]=4 + 3]="Y";E3[E3["Z"]=+"foo"]="Z";return E3;})(E3 || {});
// Enum with constant members followed by computed members
var E4 = /* @__PURE__ */ ((E4) => {E4[E4["X"]=0]="X";E4[E4["Y"]=1]="Y";E4[E4["Z"]="foo".length]="Z";return E4;})(E4 || {});
// Enum with > 2 constant members with no initializer for first member, non zero initializer for second element
var E5 = /* @__PURE__ */ ((E5) => {E5[E5["A"]=0]="A";E5[E5["B"]=3]="B";E5[E5["C"]=4]="C";return E5;})(E5 || {});
// 4
var E6 = /* @__PURE__ */ ((E6) => {E6[E6["A"]=0]="A";E6[E6["B"]=0]="B";E6[E6["C"]=1]="C";return E6;})(E6 || {});
// 1
// Enum with computed member initializer of type 'any'
var E7 = /* @__PURE__ */ ((E7) => {E7[E7["A"]="foo"["foo"]]="A";return E7;})(E7 || {});
// Enum with computed member initializer of type number
var E8 = /* @__PURE__ */ ((E8) => {E8[E8["B"]="foo"["foo"]]="B";return E8;})(E8 || {});
//Enum with computed member intializer of same enum type
var E9 = /* @__PURE__ */ ((E9) => {E9[E9["A"]=0]="A";E9[E9["B"]=0 /* A */]="B";return E9;})(E9 || {});
// (refer to .js to validate)
// Enum constant members are propagated
var doNotPropagate = [E8.B, E7.A, E4.Z, E3.X, E3.Y, E3.Z];
// Enum computed members are not propagated
var doPropagate = [E9.A, E9.B, E6.B, E6.C, E6.A, E5.A, E5.B, E5.C];
"
`;

exports[`TSC: enums enumClassification 1`] = `
"// An enum type where each member has no initializer or an initializer that specififes
// a numeric literal, a string literal, or a single identifier naming another member in
// the enum type is classified as a literal enum type. An enum type that doesn't adhere
// to this pattern is classified as a numeric enum type.
// Examples of literal enum types
var E01 = /* @__PURE__ */ ((E01) => {E01[E01["A"]=0]="A";return E01;})(E01 || {});
var E02 = /* @__PURE__ */ ((E02) => {E02[E02["A"]=123]="A";return E02;})(E02 || {});
var E03 = /* @__PURE__ */ ((E03) => {E03[E03["A"]="hello"]="A";return E03;})(E03 || {});
var E04 = /* @__PURE__ */ ((E04) => {E04[E04["A"]=0]="A";E04[E04["B"]=1]="B";E04[E04["C"]=2]="C";return E04;})(E04 || {});
var E05 = /* @__PURE__ */ ((E05) => {E05[E05["A"]=0]="A";E05[E05["B"]=10]="B";E05[E05["C"]=11]="C";return E05;})(E05 || {});
var E06 = /* @__PURE__ */ ((E06) => {E06[E06["A"]="one"]="A";E06[E06["B"]="two"]="B";E06[E06["C"]="three"]="C";return E06;})(E06 || {});
var E07 = /* @__PURE__ */ ((E07) => {E07[E07["A"]=0]="A";E07[E07["B"]=1]="B";E07[E07["C"]="hi"]="C";E07[E07["D"]=10]="D";E07[E07["E"]=11]="E";E07[E07["F"]="bye"]="F";return E07;})(E07 || {});
var E08 = /* @__PURE__ */ ((E08) => {E08[E08["A"]=10]="A";E08[E08["B"]="hello"]="B";E08[E08["C"]=10 /* A */]="C";E08[E08["D"]="hello" /* B */]="D";E08[E08["E"]=10 /* C */]="E";return E08;})(E08 || {});
// Examples of numeric enum types with only constant members
var E10 = /* @__PURE__ */ ((E10) => {return E10;})(E10 || {});
var E11 = /* @__PURE__ */ ((E11) => {E11[E11["A"]=+0]="A";E11[E11["B"]=0]="B";E11[E11["C"]=1]="C";return E11;})(E11 || {});
var E12 = /* @__PURE__ */ ((E12) => {E12[E12["A"]=1 << 0]="A";E12[E12["B"]=1 << 1]="B";E12[E12["C"]=1 << 2]="C";return E12;})(E12 || {});
// Examples of numeric enum types with constant and computed members
// Examples of numeric enum types with constant and computed members
// Examples of numeric enum types with constant and computed members
// Examples of numeric enum types with constant and computed members
// Examples of numeric enum types with constant and computed members
// Examples of numeric enum types with constant and computed members
// Examples of numeric enum types with constant and computed members
// Examples of numeric enum types with constant and computed members
var E20 = /* @__PURE__ */ ((E20) => {E20[E20["A"]="foo".length]="A";E20[E20["B"]=A + 1]="B";E20[E20["C"]=+"123"]="C";E20[E20["D"]=Math.sin(1)]="D";return E20;})(E20 || {});
"
`;

exports[`TSC: enums enumConstantMembers 1`] = `
"// Constant members allow negatives, but not decimals. Also hex literals are allowed
var E1 = /* @__PURE__ */ ((E1) => {E1[E1["a"]=1]="a";E1[E1["b"]=2]="b";return E1;})(E1 || {});
var E2 = /* @__PURE__ */ ((E2) => {E2[E2["a"]=-1]="a";E2[E2["b"]=0]="b";return E2;})(E2 || {});
var E3 = /* @__PURE__ */ ((E3) => {E3[E3["a"]=0.1]="a";E3[E3["b"]=0]="b";return E3;})(E3 || {});
// Error because 0.1 is not a constant
// Not a constant
var E5 = /* @__PURE__ */ ((E5) => {E5[E5["a"]=1 / 0]="a";E5[E5["b"]=2 / 0.0]="b";E5[E5["c"]=1.0 / 0.0]="c";E5[E5["d"]=0.0 / 0.0]="d";E5[E5["e"]=NaN]="e";E5[E5["f"]=Infinity]="f";E5[E5["g"]=-Infinity]="g";return E5;})(E5 || {});
"
`;

exports[`TSC: enums enumConstantMemberWithString 1`] = `
"var T1 = /* @__PURE__ */ ((T1) => {T1[T1["a"]="1"]="a";T1[T1["b"]="1" + "2"]="b";T1[T1["c"]="1" + "2" + "3"]="c";T1[T1["d"]="a" - "a"]="d";T1[T1["e"]="a" + 1]="e";return T1;})(T1 || {});
var T2 = /* @__PURE__ */ ((T2) => {T2[T2["a"]="1"]="a";T2[T2["b"]="1" + "2"]="b";return T2;})(T2 || {});
var T3 = /* @__PURE__ */ ((T3) => {T3[T3["a"]="1"]="a";T3[T3["b"]="1" + "2"]="b";T3[T3["c"]=1]="c";T3[T3["d"]=1 + 2]="d";return T3;})(T3 || {});
var T4 = /* @__PURE__ */ ((T4) => {T4[T4["a"]="1"]="a";return T4;})(T4 || {});
var T5 = /* @__PURE__ */ ((T5) => {T5[T5["a"]="1" + "2"]="a";return T5;})(T5 || {});
"
`;

exports[`TSC: enums enumConstantMemberWithStringEmitDeclaration 1`] = `
"var T1 = /* @__PURE__ */ ((T1) => {T1[T1["a"]="1"]="a";T1[T1["b"]="1" + "2"]="b";T1[T1["c"]="1" + "2" + "3"]="c";return T1;})(T1 || {});
var T2 = /* @__PURE__ */ ((T2) => {T2[T2["a"]="1"]="a";T2[T2["b"]="1" + "2"]="b";return T2;})(T2 || {});
var T3 = /* @__PURE__ */ ((T3) => {T3[T3["a"]="1"]="a";T3[T3["b"]="1" + "2"]="b";return T3;})(T3 || {});
var T4 = /* @__PURE__ */ ((T4) => {T4[T4["a"]="1"]="a";return T4;})(T4 || {});
var T5 = /* @__PURE__ */ ((T5) => {T5[T5["a"]="1" + "2"]="a";return T5;})(T5 || {});
"
`;

exports[`TSC: enums enumConstantMemberWithTemplateLiterals 1`] = `
"var T1 = /* @__PURE__ */ ((T1) => {T1[T1["a"]=\`1\`]="a";return T1;})(T1 || {});
var T2 = /* @__PURE__ */ ((T2) => {T2[T2["a"]=\`1\`]="a";T2[T2["b"]="2"]="b";T2[T2["c"]=3]="c";return T2;})(T2 || {});
var T3 = /* @__PURE__ */ ((T3) => {T3[T3["a"]=\`1\` + \`1\`]="a";return T3;})(T3 || {});
var T4 = /* @__PURE__ */ ((T4) => {T4[T4["a"]=\`1\`]="a";T4[T4["b"]=\`1\` + \`1\`]="b";T4[T4["c"]=\`1\` + "2"]="c";T4[T4["d"]="2" + \`1\`]="d";T4[T4["e"]="2" + \`1\` + \`1\`]="e";return T4;})(T4 || {});
var T5 = /* @__PURE__ */ ((T5) => {T5[T5["a"]=\`1\`]="a";T5[T5["b"]=\`1\` + \`2\`]="b";T5[T5["c"]=\`1\` + \`2\` + \`3\`]="c";T5[T5["d"]=1]="d";T5[T5["e"]=\`1\` - \`1\`]="e";T5[T5["f"]=\`1\` + 1]="f";T5[T5["g"]=\`1\${"2"}3\`]="g";T5[T5["h"]=\`1\`.length]="h";return T5;})(T5 || {});
var T6 = /* @__PURE__ */ ((T6) => {T6[T6["a"]=1]="a";T6[T6["b"]=\`12\`.length]="b";return T6;})(T6 || {});
"
`;

exports[`TSC: enums enumConstantMemberWithTemplateLiteralsEmitDeclaration 1`] = `
"var T1 = /* @__PURE__ */ ((T1) => {T1[T1["a"]=\`1\`]="a";return T1;})(T1 || {});
var T2 = /* @__PURE__ */ ((T2) => {T2[T2["a"]=\`1\`]="a";T2[T2["b"]="2"]="b";T2[T2["c"]=3]="c";return T2;})(T2 || {});
var T3 = /* @__PURE__ */ ((T3) => {T3[T3["a"]=\`1\` + \`1\`]="a";return T3;})(T3 || {});
var T4 = /* @__PURE__ */ ((T4) => {T4[T4["a"]=\`1\`]="a";T4[T4["b"]=\`1\` + \`1\`]="b";T4[T4["c"]=\`1\` + "2"]="c";T4[T4["d"]="2" + \`1\`]="d";T4[T4["e"]="2" + \`1\` + \`1\`]="e";return T4;})(T4 || {});
var T5 = /* @__PURE__ */ ((T5) => {T5[T5["a"]=\`1\`]="a";T5[T5["b"]=\`1\` + \`2\`]="b";T5[T5["c"]=\`1\` + \`2\` + \`3\`]="c";T5[T5["d"]=1]="d";return T5;})(T5 || {});
var T6 = /* @__PURE__ */ ((T6) => {T6[T6["a"]=1]="a";T6[T6["b"]=\`12\`.length]="b";return T6;})(T6 || {});
"
`;

exports[`TSC: enums enumErrorOnConstantBindingWithInitializer 1`] = `
"const { value:value="123" } = thing;
var E = /* @__PURE__ */ ((E) => {E[E["test"]=value]="test";return E;})(E || {});
"
`;

exports[`TSC: enums enumExportMergingES6 1`] = `
"export var Animals = /* @__PURE__ */ ((Animals) => {Animals[Animals["Cat"]=1]="Cat";return Animals;})(Animals || {});
export var Animals = /* @__PURE__ */ ((Animals) => {Animals[Animals["Dog"]=2]="Dog";return Animals;})(Animals || {});
export var Animals = /* @__PURE__ */ ((Animals) => {Animals[Animals["CatDog"]=Cat | Dog]="CatDog";return Animals;})(Animals || {});
"
`;

exports[`TSC: enums enumMerging 1`] = `
"// Enum with only constant members across 2 declarations with the same root module
// Enum with initializer in all declarations with constant members with the same root module
var M1;((M1) => {var EImpl1 = /* @__PURE__ */ ((EImpl1) => {EImpl1[EImpl1["A"]=0]="A";EImpl1[EImpl1["B"]=1]="B";EImpl1[EImpl1["C"]=2]="C";return EImpl1;})(EImpl1 || {});var EImpl1 = /* @__PURE__ */ ((EImpl1) => {EImpl1[EImpl1["D"]=1]="D";EImpl1[EImpl1["E"]=2]="E";EImpl1[EImpl1["F"]=3]="F";return EImpl1;})(EImpl1 || {});var EConst1 = /* @__PURE__ */ ((EConst1) => {EConst1[EConst1["A"]=3]="A";EConst1[EConst1["B"]=2]="B";EConst1[EConst1["C"]=1]="C";return EConst1;})(EConst1 || {});var EConst1 = /* @__PURE__ */ ((EConst1) => {EConst1[EConst1["D"]=7]="D";EConst1[EConst1["E"]=9]="E";EConst1[EConst1["F"]=8]="F";return EConst1;})(EConst1 || {});var x = [EConst1.A, EConst1.B, EConst1.C, EConst1.D, EConst1.E, EConst1.F];})(M1 || (M1 = {}));
// Enum with only computed members across 2 declarations with the same root module 
var M2;((M2) => {var EComp2 = /* @__PURE__ */ ((EComp2) => {EComp2[EComp2["A"]="foo".length]="A";EComp2[EComp2["B"]="foo".length]="B";EComp2[EComp2["C"]="foo".length]="C";return EComp2;})(EComp2 || {});var EComp2 = /* @__PURE__ */ ((EComp2) => {EComp2[EComp2["D"]="foo".length]="D";EComp2[EComp2["E"]="foo".length]="E";EComp2[EComp2["F"]="foo".length]="F";return EComp2;})(EComp2 || {});var x = [EComp2.A, EComp2.B, EComp2.C, EComp2.D, EComp2.E, EComp2.F];})(M2 || (M2 = {}));
// Enum with initializer in only one of two declarations with constant members with the same root module
var M3;((M3) => {var EInit = /* @__PURE__ */ ((EInit) => {EInit[EInit["A"]=0]="A";EInit[EInit["B"]=1]="B";return EInit;})(EInit || {});var EInit = /* @__PURE__ */ ((EInit) => {EInit[EInit["C"]=1]="C";EInit[EInit["D"]=2]="D";EInit[EInit["E"]=3]="E";return EInit;})(EInit || {});})(M3 || (M3 = {}));
// Enums with same name but different root module
var M4;((M4) => {var Color = /* @__PURE__ */ ((Color) => {Color[Color["Red"]=0]="Red";Color[Color["Green"]=1]="Green";Color[Color["Blue"]=2]="Blue";return Color;})(Color || {});})(M4 || (M4 = {}));
var M5;((M5) => {var Color = /* @__PURE__ */ ((Color) => {Color[Color["Red"]=0]="Red";Color[Color["Green"]=1]="Green";Color[Color["Blue"]=2]="Blue";return Color;})(Color || {});})(M5 || (M5 = {}));
var M6;((M6) => {let A;((A) => {var Color = /* @__PURE__ */ ((Color) => {Color[Color["Red"]=0]="Red";Color[Color["Green"]=1]="Green";Color[Color["Blue"]=2]="Blue";return Color;})(Color || {});})(A = M6.A || (M6.A = {}));})(M6 || (M6 = {}));
var M6;((M6) => {((A) => {var Color = /* @__PURE__ */ ((Color) => {Color[Color["Yellow"]=1]="Yellow";return Color;})(Color || {});})(A = M6.A || (M6.A = {}));var t = A.Color.Yellow;t = A.Color.Red;})(M6 || (M6 = {}));
"
`;

exports[`TSC: enums enumMergingErrors 1`] = `
"// Enum with constant, computed, constant members split across 3 declarations with the same root module
var M;((M) => {var E1 = /* @__PURE__ */ ((E1) => {E1[E1["A"]=0]="A";return E1;})(E1 || {});var E2 = /* @__PURE__ */ ((E2) => {E2[E2["C"]=0]="C";return E2;})(E2 || {});var E3 = /* @__PURE__ */ ((E3) => {E3[E3["A"]=0]="A";return E3;})(E3 || {});})(M || (M = {}));
((M) => {var E1 = /* @__PURE__ */ ((E1) => {E1[E1["B"]="foo".length]="B";return E1;})(E1 || {});var E2 = /* @__PURE__ */ ((E2) => {E2[E2["B"]="foo".length]="B";return E2;})(E2 || {});var E3 = /* @__PURE__ */ ((E3) => {E3[E3["C"]=0]="C";return E3;})(E3 || {});})(M || (M = {}));
((M) => {var E1 = /* @__PURE__ */ ((E1) => {E1[E1["C"]=0]="C";return E1;})(E1 || {});var E2 = /* @__PURE__ */ ((E2) => {E2[E2["A"]=0]="A";return E2;})(E2 || {});var E3 = /* @__PURE__ */ ((E3) => {E3[E3["B"]="foo".length]="B";return E3;})(E3 || {});})(M || (M = {}));
// Enum with no initializer in either declaration with constant members with the same root module
var M1;((M1) => {var E1 = /* @__PURE__ */ ((E1) => {E1[E1["A"]=0]="A";return E1;})(E1 || {});})(M1 || (M1 = {}));
((M1) => {var E1 = /* @__PURE__ */ ((E1) => {E1[E1["B"]=0]="B";return E1;})(E1 || {});})(M1 || (M1 = {}));
((M1) => {var E1 = /* @__PURE__ */ ((E1) => {E1[E1["C"]=0]="C";return E1;})(E1 || {});})(M1 || (M1 = {}));
// Enum with initializer in only one of three declarations with constant members with the same root module
var M2;((M2) => {var E1 = /* @__PURE__ */ ((E1) => {E1[E1["A"]=0]="A";return E1;})(E1 || {});})(M2 || (M2 = {}));
((M2) => {var E1 = /* @__PURE__ */ ((E1) => {E1[E1["B"]=0]="B";return E1;})(E1 || {});})(M2 || (M2 = {}));
((M2) => {var E1 = /* @__PURE__ */ ((E1) => {E1[E1["C"]=0]="C";return E1;})(E1 || {});})(M2 || (M2 = {}));
"
`;

exports[`TSC: enums enumShadowedInfinityNaN 1`] = `
"// https://github.com/microsoft/TypeScript/issues/54981
{
	let Infinity = {};
	var En = /* @__PURE__ */ ((En) => {En[En["X"]=Infinity]="X";return En;})(En || {});
}
{
	let NaN = {};
	var En = /* @__PURE__ */ ((En) => {En[En["X"]=NaN]="X";return En;})(En || {});
}
"
`;
